Pawn movement is implemented

--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -96,6 +96,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\AI.cs" />
+    <Compile Include="Classes\GameRules.cs" />
     <Compile Include="Classes\GameBoard.cs" />
     <Compile Include="Classes\Piece.cs" />
     <Compile Include="Classes\Square.cs" />
