--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Classes\AI.cs" />
     <Compile Include="Classes\GameRules.cs" />
     <Compile Include="Classes\GameBoard.cs" />
+    <Compile Include="Classes\KingCapturedException.cs" />
     <Compile Include="Classes\Piece.cs" />
     <Compile Include="Classes\Square.cs" />
     <Compile Include="MainPage.xaml.cs">
